salesforce/force-app/main/default/objects/Contract_Line_Item__c/Contract_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Line items for Contracts, populated from Opportunity Products. Used for ERP reconciliation and detailed invoicing.</description>
    <label>Contract Line Item</label>
    <nameField>
        <displayFormat>CLI-{00000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>