salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Line item description or notes</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>