salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_Months__c</fullName>
    <label>Duration (Months)</label>
    <description>Number of months between service start and end date</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>