salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product code (SKU) for ERP matching</description>
    <label>Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>