salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Product family/category</description>
    <label>Product Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>