salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product ID</label>
    <description>Salesforce Product2 ID for ERP tracking</description>
    <type>Text</type>
    <length>18</length>
</CustomField>