salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>The product line from the Opportunity (aligned with Product_Lines_Multi__c)</description>
    <label>Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>