salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product name (denormalized for reporting)</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>