salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <description>Service start date for this line item</description>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>