salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <label>Service End Date</label>
    <description>End date for this line item's service (inherits from Contract)</description>
    <type>Date</type>
</CustomField>