salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <label>Service Start Date</label>
    <description>Start date for this line item's service (inherits from Contract)</description>
    <type>Date</type>
</CustomField>