salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Source_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Source_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The source Opportunity Line Item this was created from</description>
    <label>Source Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>