salesforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Source_Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Line_Item_Id__c</fullName>
    <label>Source Line Item ID</label>
    <description>ID of the source OpportunityLineItem for deduplication</description>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>